--- a/results.html
+++ b/results.html
@@ -90,16 +90,16 @@
                  <div class="w-full md:flex-grow bg-white rounded-lg shadow-md p-6">
                      <p class="text-sm text-gray-500 mb-1">
                          <span data-i18n="resultsPage.reviewFrom">点评来自:</span> 
-                         <span id="user-nickname" class="font-medium text-gray-700" data-i18n="common.loading">加载中...</span>
+                         <span id="user-nickname" class="font-medium text-gray-700">...</span>
                      </p>
-                     <h1 id="rating-title" class="text-3xl font-bold mb-3" data-i18n="common.loading">加载中...</h1>
-                     <h2 id="cigar-name" class="text-xl font-semibold mb-1" data-i18n="common.loading">加载中...</h2>
+                     <h1 id="rating-title" class="text-3xl font-bold mb-3">...</h1>
+                     <h2 id="cigar-name" class="text-xl font-semibold mb-1">...</h2>
                      <div class="mb-4 text-sm text-gray-600 flex space-x-4">
                          <span><span data-i18n="resultsPage.size">尺寸</span>: <strong id="cigar-size">...</strong></span>
                          <span><span data-i18n="resultsPage.origin">产地</span>: <strong id="cigar-origin">...</strong></span>
                      </div>
                      <div id="cigar-review-container" class="prose prose-sm max-w-none text-gray-700 border-t pt-4">
-                         <p data-i18n="common.loading">加载中...</p>
+                         <p>...</p>
                      </div>
                      <div id="selected-flavors-container" class="hidden pt-2">
                          <h4 class="text-sm font-semibold text-gray-600 mb-2" data-i18n="resultsPage.mainFlavors">主要风味:</h4>
