--- a/results.html
+++ b/results.html
@@ -90,16 +90,15 @@
                  <div class="w-full md:flex-grow bg-white rounded-lg shadow-md p-6">
                      <p class="text-sm text-gray-500 mb-1">
                          <span data-i18n="resultsPage.reviewFrom">点评来自:</span> 
-                         <span id="user-nickname" class="font-medium text-gray-700">...</span>
+                         <span id="user-nickname" class="font-medium text-gray-700"></span>
                      </p>
-                     <h1 id="rating-title" class="text-3xl font-bold mb-3">...</h1>
-                     <h2 id="cigar-name" class="text-xl font-semibold mb-1">...</h2>
+                     <h1 id="rating-title" class="text-3xl font-bold mb-3"></h1>
+                     <h2 id="cigar-name" class="text-xl font-semibold mb-1"></h2>
                      <div class="mb-4 text-sm text-gray-600 flex space-x-4">
-                         <span><span data-i18n="resultsPage.size">尺寸</span>: <strong id="cigar-size">...</strong></span>
-                         <span><span data-i18n="resultsPage.origin">产地</span>: <strong id="cigar-origin">...</strong></span>
+                         <span><span data-i18n="resultsPage.size">尺寸</span>: <strong id="cigar-size"></strong></span>
+                         <span><span data-i18n="resultsPage.origin">产地</span>: <strong id="cigar-origin"></strong></span>
                      </div>
                      <div id="cigar-review-container" class="prose prose-sm max-w-none text-gray-700 border-t pt-4">
-                         <p>...</p>
                      </div>
                      <div id="selected-flavors-container" class="hidden pt-2">
                          <h4 class="text-sm font-semibold text-gray-600 mb-2" data-i18n="resultsPage.mainFlavors">主要风味:</h4>
@@ -109,7 +108,7 @@
             </div>
 
             <section id="score-section" class="bg-white rounded-xl shadow-lg p-6 mb-8 flex flex-col md:flex-row gap-6 items-center">
-                 </section>
+            </section>
 
              <div id="save-button-container" class="hidden mb-6">
                  <button id="save-rating-button" onclick="saveRating()" class="w-full py-3 px-6 bg-green-600 text-white font-bold text-lg rounded-lg shadow-md hover:bg-green-700 transition" data-i18n="resultsPage.saveAsMyRating">
